# OS_labs

./: CMakeLists.txt  README.md
Lab10/: CMakeLists.txt  Description_Lab10.md  main.c  task1.c
Lab11/: CMakeLists.txt  Description_Lab10.md  Description_Lab11.md
Lab12/: CMakeLists.txt  Description_Lab12.md  data  graph_data.py  thinkplot.py
Lab13/: CMakeLists.txt  Description_Lab13.md  main.c  queue.c  queue_cond.c  queue_mutex.c  utils.c  utils.h
Lab2/: CMakeLists.txt  Description_Lab2.md  main.c  task1.c  task2.c  task3.c  task7.c  task8.c
Lab3/: CMakeLists.txt  Description_Lab3.md  main.c  memory-user.c
Lab4/: CMakeLists.txt  Description_Lab4.md  aspace.c  main.c  null.c  task2.c  task3.c  task6.c  task7.c  task8.c  valgrind-out.txt
Lab5/: CMakeLists.txt  Description_Lab5.md  main.c  task1.c  task2.c  task3_mytail.c  task4.c  task5_myls.c  task6_myfind.c
Lab6/: CMakeLists.txt  Description_Lab5.md  Description_Lab6.md  main.c  task1_check-xor.c  task2_check-fletcher.c  task3_crc.c  task5_check-csum.c  task5_create-csum.c  task5_create-csum.h
Lab6/tests/: test2.txt  test3.txt
Lab7/: CMakeLists.txt  Description_Lab7.md  main.c
Lab8/: CMakeLists.txt  Description_Lab8.md  client.c  main.c  server.c
Lab9/: CMakeLists.txt  Description_Lab9.md  main-race.c
